--- a/config/application.yml.sample
+++ b/config/application.yml.sample
@@ -10,9 +10,9 @@ AWS_SECRET_ACCESS_KEY: "AWS_SECRET_ACCESS_KEY"
 S3_BUCKET_NAME: "S3_BUCKET_NAME"
 
 DATABASE_HOSTNAME: "localhost"
-DATABASE_NAME: "rails_app_development"
+DATABASE_NAME: "edu_tratu_development"
 DATABASE_USERNAME: "root"
-DATABASE_PASSWORD: ""
+DATABASE_PASSWORD: "root"
 REDIS_HOSTNAME: "localhost"
 
 RAILS_ENV: "development"
