--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ pickle-email-*.html
 config/initializers/secret_token.rb
 config/secrets.yml
 config/database.yml
+config/application.yml
 
 # dotenv
 # TODO Comment out this rule if environment variables can be committed
