--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ bower.json
 
 # Ignore Byebug command history file.
 .byebug_history
+.framgia-ci-reports/
+.framgia-ci-result.temp.yml
+config/application.yml
