--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,6 @@
     "font-awesome": "font-awsome#^4.7.0",
     "jquery-ujs": "https://github.com/rails/jquery-ujs.git#^1.2.2",
     "sweetalert": "^1.1.3",
-    "human-format": "~0.5.0",
+    "human-format": "~0.5.0"
   }
 }
